fixed pre code wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,6 +163,8 @@ pre {
   padding: 1rem;
   overflow-x: auto;
   font-style: monospace;
+  white-space: pre-wrap; 
+  word-break: break-word;
 }
 
 p code,
@@ -235,6 +237,7 @@ textarea {
   display: grid;
   grid-template-rows: auto 1fr auto;
   gap: 2rem;
+  
 }
 
 /* Icons settings */
